--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <h1>test project</h1> 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi non cupiditate nulla ducimus deserunt ut modi iste recusandae quia explicabo.</p>
     <b>develop branch</b>
-    <p>수정 3번째</p>
-    <p>다시</p>
+    <p>feature-A</p>
 </body>
 </html>
