24일 수정후 다시올림

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi non cupiditate nulla ducimus deserunt ut modi iste recusandae quia explicabo.</p>
     <b>develop branch</b>
     <p>feature-A</p>
+    <span>24-06-24 (월) 삭제후 다른텍스트로 수정</span>
 </body>
 </html>
