--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <b>develop branch</b>
     <p>feature-A</p>
     <span>24-06-24 (월) 삭제후 다른텍스트로 수정</span>
+    <b>25일 새로운 가지치기</b>
 </body>
 </html>
